# sdl2

./: CMakeLists.txt  main.cpp
